--- a/CheckoutFormBS.html
+++ b/CheckoutFormBS.html
@@ -29,18 +29,52 @@
   </head>
   <body class="bg-light">
     <div class="container">
-        <div class="container">
-            <main>
-                <div class="py-5 text-center">
-                    <img src="./img/logo.png" alt="" width="72" height="72" class="d-block mx-auto mb-4">
-                    <h2>
-                        Checkout Form with Bootstrap
-                    </h2>
-                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias odit quas molestiae error dolorum sapiente voluptatem! Quidem tempore reiciendis quam dolorum amet aliquid ea unde aspernatur, eligendi doloribus vitae minus assumenda accusantium dignissimos cupiditate, aliquam minima vel nisi id sapiente facilis deserunt! Soluta cumque repellat blanditiis, impedit ex laborum qui.</p>
-                </div>
-            </main>
-        </div>
+      <div class="container">
+        <main>
+          <div class="py-5 text-center">
+            <img
+              src="./img/logo.png"
+              alt=""
+              width="72"
+              height="72"
+              class="d-block mx-auto mb-4"
+            />
+            <h2>Checkout Form with Bootstrap</h2>
+            <p class="lead">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
+              odit quas molestiae error dolorum sapiente voluptatem! Quidem
+              tempore reiciendis quam dolorum amet aliquid ea unde aspernatur,
+              eligendi doloribus vitae minus assumenda accusantium dignissimos
+              cupiditate, aliquam minima vel nisi id sapiente facilis deserunt!
+              Soluta cumque repellat blanditiis, impedit ex laborum qui.
+            </p>
+          </div>
+          <div class="row g-3">
+            <div class="col-md-5 col-lg-4 order-md-last">
+              <h4
+                class="d-flex justify-content-between 
+                align-items-center mb-3">
+                <span class="text-muted">Your cart</span>
+                <span class="badge bg-warning rounded-pill">4</span>
+              </h4>
+              <ul class="list-group mb-3">
+                <li class="list-group-item d-flex justify-content-between lh-sm border-info">
+                    <img src="./img/iphone.png" alt="" width="40" height="40" class="me-2">
+                    <div class="me-2">
+                        <h6 class="my-0">
+                            Iphone
+                            <small class="text-muted">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita, delectus.
+                            </small>
+                        </h6>
+                    </div>
+                    <span>9.000:-</span>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </main>
+      </div>
     </div>
-
   </body>
 </html>
