--- a/CheckoutFormBS.html
+++ b/CheckoutFormBS.html
@@ -4,28 +4,33 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CheckoutFormBS</title>
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"
     />
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"
+      integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK"
       crossorigin="anonymous"
     ></script>
     <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-      integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
       crossorigin="anonymous"
     ></script>
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
-      integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
+      src="https://code.jquery.com/jquery-3.6.1.min.js"
+      integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
       crossorigin="anonymous"
     ></script>
-    <title>CheckoutFormBS</title>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+      integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body class="bg-light">
     <div class="container">
@@ -37,7 +42,7 @@
               alt=""
               width="72"
               height="72"
-              class="d-block mx-auto mb-4"
+              class="d-block mx-auto mb-3"
             />
             <h2>Checkout Form with Bootstrap</h2>
             <p class="lead">
@@ -49,7 +54,9 @@
               Soluta cumque repellat blanditiis, impedit ex laborum qui.
             </p>
           </div>
-          <div class="row g-3">
+
+          <div class="row g-4">
+            <!--CARD BEGINS-->
             <div class="col-md-5 col-lg-4 order-md-last">
               <h4
                 class="d-flex justify-content-between align-items-center mb-3"
@@ -59,7 +66,7 @@
               </h4>
               <ul class="list-group mb-3">
                 <li
-                  class="list-group-item d-flex justify-content-between lh-sm border-info"
+                  class="list-group-item d-flex justify-content-between lh-sm border-warning"
                 >
                   <img
                     src="./img/iphone.png"
@@ -80,7 +87,7 @@
                   <span>9.000:-</span>
                 </li>
                 <li
-                  class="list-group-item d-flex justify-content-between lh-sm border-info"
+                  class="list-group-item d-flex justify-content-between lh-sm border-warning"
                 >
                   <img
                     src="./img/apple-watch.jpeg"
@@ -101,7 +108,7 @@
                   <span>4.500:-</span>
                 </li>
                 <li
-                  class="list-group-item d-flex justify-content-between lh-sm border-info"
+                  class="list-group-item d-flex justify-content-between lh-sm border-warning"
                 >
                   <img
                     src="./img/macbookair.jpeg"
@@ -148,7 +155,7 @@
                 </div>
               </form>
             </div>
-
+            <!--CARD ENDS-->
             <div class="col-md-7 col-lg-8">
               <h4 class="mb-3">Billing address:</h4>
               <form class="needs-validation" novalidate>
@@ -208,23 +215,20 @@
                   <div class="col-12">
                     <label for="address" class="form-label"
                       >Address 2
-                      <span class="text-muted">(Optional)</span></label
-                    >
+                      <span class="text-muted">(Optional)</span>
+                    </label>
                     <input
                       type="address"
                       class="form-control"
                       id="email"
                       placeholder="Apartment or suit"
                     />
-                    <div class="invalid-feedback">
-                      Please enter a valid address!
-                    </div>
                   </div>
 
                   <div class="col-md-4">
                     <label for="" class="form-label"> City </label>
-                    <select class="form-select" name="" id="city">
-                      <option value="" selected>Select one...</option>
+                    <select class="form-select" name="" id="city" required>
+                      <option value="">Select one...</option>
                       <option value="">Stockholm</option>
                       <option value="">Istanbul</option>
                       <option value="">New York</option>
@@ -237,15 +241,13 @@
 
                   <div class="col-md-5">
                     <label for="country" class="form-label"> Country </label>
-
-                    <select class="form-select" name="" id="country">
-                      <option value="" selected>Select one...</option>
+                    <select class="form-select" name="" id="country" required>
+                      <option value="">Select one...</option>
                       <option value="">SWE</option>
                       <option value="">TR</option>
                       <option value="">USA</option>
                       <option value="">UK</option>
                     </select>
-
                     <div class="invalid-feedback">
                       Please select a valid country!...
                     </div>
@@ -253,9 +255,12 @@
 
                   <div class="col-md-3">
                     <label for="postcode" class="form-label"> Postcode </label>
-
-                    <input type="text" class="form-control" id="postcode" required />
-
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="postcode"
+                      required
+                    />
                     <div class="invalid-feedback">Postcode required!...</div>
                   </div>
                 </div>
@@ -282,11 +287,160 @@
                     Save this info for the next time-
                   </label>
                 </div>
+
+                <hr class="my-3" />
+                <!--PAYMENT STARTS-->
+                <h4 class="mb-3">Payment</h4>
+
+                <div class="my-3">
+                  <div class="form-check">
+                    <input
+                      type="radio"
+                      id="credit"
+                      class="form-check-label"
+                      name="paymentMethod"
+                      checked
+                      required
+                    />
+                    <label for="credit" form-check-label> Credit Card </label>
+                  </div>
+
+                  <div class="form-check">
+                    <input
+                      type="radio"
+                      id="debit"
+                      class="form-check-label"
+                      name="paymentMethod"
+                      required
+                    />
+                    <label for="debit" form-check-label> Debit Card </label>
+                  </div>
+
+                  <div class="form-check">
+                    <input
+                      type="radio"
+                      id="payPal"
+                      class="form-check-label"
+                      name="paymentMethod"
+                      required
+                    />
+                    <label for="payPal" form-check-label> Paypal Card </label>
+                  </div>
+                </div>
+
+                <!--PAYMENT ENDS-->
+
+                <div class="row gy-2">
+                  <div class="col-md-6">
+                    <label for="cc-name" class="form-label">
+                      Name of card holder:
+                    </label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="cc-name"
+                      required
+                    />
+                    <small class="text-muted">
+                      Full name as displayed on card
+                    </small>
+                    <div class="invalid-feedback">Name on card is required</div>
+                  </div>
+
+                  <div class="col-md-6">
+                    <label for="cc-number" class="form-label">
+                      Car number:
+                    </label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="cc-number"
+                      required
+                    />
+                    <div class="invalid-feedback">
+                      Card number on card is required
+                    </div>
+                  </div>
+
+                  <div class="col-md-3">
+                    <label for="cc-exp" class="form-label">
+                      Expiration date:
+                    </label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="cc-exp"
+                      required
+                    />
+                    <div class="invalid-feedback">
+                      Expiration date on card is required
+                    </div>
+                  </div>
+
+                  <div class="col-md-3">
+                    <label for="cc-CVV" class="form-label"> CVV: </label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="cc-CVV"
+                      required
+                    />
+                    <div class="invalid-feedback">CVV on card is required</div>
+                  </div>
+                </div>
+
+                <hr class="my-4" />
+                <button class="btn btn-primary w-100 btn-lg" type="submit">
+                  Continue to checkout
+                </button>
               </form>
             </div>
           </div>
         </main>
+
+        <footer class="my-5 pt-5 text-muted text-center text-small">
+          <p class="mb-1">
+            &copy;<span id="year"></span>
+            Cetin's Company
+          </p>
+          <ul class="list-inline">
+            <li class="list-inline-item">
+              <a href="#" class="text-decoration-none"> Privacy </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#" class="text-decoration-none"> Terms </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#" class="text-decoration-none"> Support </a>
+            </li>
+          </ul>
+        </footer>
       </div>
     </div>
+
+    <script>
+      $("#year").text(new Date().getFullYear());
+
+     // Example starter JavaScript for disabling form submissions if there are invalid fields
+(function () {
+  'use strict'
+
+  // Fetch all the forms we want to apply custom Bootstrap validation styles to
+  var forms = document.querySelectorAll('.needs-validation')
+
+  // Loop over them and prevent submission
+  Array.prototype.slice.call(forms)
+    .forEach(function (form) {
+      form.addEventListener('submit', function (event) {
+        if (!form.checkValidity()) {
+          event.preventDefault()
+          event.stopPropagation()
+        }
+
+        form.classList.add('was-validated')
+      }, false)
+    })
+})()
+    </script>
   </body>
 </html>
